--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "graphql-http": "^1.22.4",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@prisma/extension-accelerate": "^1.2.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "prisma": "^6.4.0"
   }
 }
