--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "graphql-http": "^1.22.4",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
