--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "strictNullChecks": false,
         "esModuleInterop": true,
         "allowImportingTsExtensions": true,
-        "noEmit": true
+        "noEmit": true,
+        "experimentalDecorators": true,
     },
     "exclude": [
         "node_modules"
