.env.example has been updated

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-PORT=  (your http port here)
-DATABASE_URL= (DB url for the Prisma ORM)
+PORT= (your http port here)
+POSTGRESQL_DATABASE_URL="mysql://[username]:[password]@[host]/[database]"
+MYSQL_DATABASE_URL="postgresql://[username]:[password]@[host]/[database]"
 JWT_SECRET=(jwt base64 encoded token)
